<resources>
    <string name="app_name">DealMyMeal</string>
    <string name="title_activity_burger_menu">BurgerMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="burgerbuttonmenu">BurgerButtonMenu</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="title_addmeal">Add Meal</string>
    <string name="title_dashboard">Plan</string>
    <string name="title_overview">Overview</string>
    <string name="title_edit">Edit Meal</string>
    <string name="title_generate">Generate</string>
    <string name="title_activity_navigation_bar">MainActivity</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure you want to delete your selection?</string>
    <string name="delete_plan_message">Are you sure you want to delete this plan?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="MenuButtonHomeFragment">MenuButtonHomeFragment</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_star">Filter</string>
    <string name="add_meal">Add Meal</string>
    <string name="enter_menu">Enter the Name of your meal!</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="add_entry">Add Entry...</string>
    <string name="meat">Meat</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="special">Special</string>
    <string name="add">Add</string>
    <string name="changeLanguage">Language</string>
    <string name="chooseLanguage">Choose Language:</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_category">Category</string>
    <string name="meal_rating">Rating</string>
    <string name="welcome_text">Add meals to your list \n here to generate your daily meal!</string>
    <string name="toast_add_duplicate_error">This meal already exists</string>
    <string name="toastEmptyMeal">Meal Name can´t be empty!</string>
    <string name="chooseMeat">Meat</string>
    <string name="chooseSpecial">Special</string>
    <string name="chooseVeggie">Veggie</string>
    <string name="chooseCategory">Choose your category: </string>

    <string-array name="categories">
        <item>Meat</item>
        <item>Vegetarian</item>
        <item>Special</item>
    </string-array>

    <string name="chooseRating">Filter by Rating:</string>
    <string name="mealAdded">Meal %1$s added!</string>
    <string name="days">Days</string>
    <string name="meals_per_day">Meals per day</string>
    <string name="currentDay">Day %1$d</string>
    <string name="currentPlan">Current Plan: %1$s</string>
    <string name="average_rating">Average Rating</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="filter_by_rating">Filter by rating</string>
    <string name="apply_filter">Apply filter</string>
    <string name="apply">Apply</string>
    <string name="veggie_meat_ratio">Veggie/Meat Ratio</string>
    <string name="specials">Specials</string>
    <string name="not_enough_meals">Not enough meals</string>
</resources>