<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCategory">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipsCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/meat"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/green"
                    app:chipIcon="@drawable/ic_meat"
                    app:chipIconTint="@color/chip_icon_tint"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/vegetarian"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/green"
                    app:chipIcon="@drawable/ic_veggie"
                    app:chipIconTint="@color/chip_icon_tint"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSpecial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/special"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/green"
                    app:chipIcon="@drawable/ic_special"
                    app:chipIconTint="@color/chip_icon_tint"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/labelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="179dp"
        android:drawableStart="@drawable/ic_special"
        android:drawablePadding="8dp"
        android:text="Filter by category"
        android:textColor="#748A9D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/labelFilterRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:text="Filter by rating"
        android:textColor="#748A9D"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_filter_star_filled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="4.0"
        app:layout_constraintEnd_toStartOf="@id/textSliderRight"
        app:layout_constraintStart_toEndOf="@+id/textSliderLeft"
        app:layout_constraintTop_toBottomOf="@+id/labelFilterRating"
        app:values="@array/initial_slider_values" />

    <TextView
        android:id="@+id/textSliderLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelFilterRating" />

    <TextView
        android:id="@+id/textSliderRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:padding="4dp"
        android:text="4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelFilterRating" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Apply filter"
        android:textColor="#748A9D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>